MDEV-7925 Inconsistent behavior of ST_Touches with a POINT as one of arguments.         Some cases of the feature's borders were treated incorrectly.